src/objects/zkmulti__MCQueued_Package__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Dimension_Units__c</fullName>
        <label>Dimension Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Height__c</fullName>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Length__c</fullName>
        <label>Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Width__c</fullName>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Queued Package</label>
    <nameField>
        <displayFormat>Queued-Package-{00000000}</displayFormat>
        <label>Queued Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queued Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>